# dp_coupling

./: README.md
LastFm/agg/: CMakeLists.txt  main.cpp  matMsg.h
LastFm/client/: CMakeLists.txt  dpCoupling.cpp  dpCoupling.h  main.cpp  readLastfm.cpp  readLastfm.h
LastFm/data/preprocess/: exploration-rating.nb.html  preprocess.R
MovieLens/agg/: main.cpp  matMsg.cpp
MovieLens/client/: CMakeLists.txt  dpCoupling.cpp  dpCoupling.h  main.cpp  readMovielens.cpp  readMovielens.h
